changed cover photo and updated pricing

--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -54,8 +54,9 @@ html,
 body {
   height: 100%;
   /*background-color: #F3DCDC;*/
-  background: url(<%= asset_path "lulu_cover_photo2.png" %>) no-repeat center center fixed;
-  background-size: cover;
+  background: url(<%= asset_path "Triple_Lemon_Sour_Cream.JPG" %>) no-repeat center center fixed;
+  background-size: 75%;
+  background-color: #432B0F;
   
 }
 body {
