--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,8 @@
                     <div class="col-sm-6">
                       <ul class="nav masthead-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#sweet-offerings">Sweet Offerings</a></li>
+                        <li><a href="#traditional">Traditional</a></li>
+                        <li><a href="#specialty">Specialty</a></li>
                         <li><a href="#testimonials">Client Testimonials</a></li>
                         <li><a href="#contact-us">Contact Us</a></li>
                       </ul>
@@ -34,26 +35,59 @@
             </div>
           </div>
 
+
+
      <!-- 2nd section with selection of goods -->     
-      <div id="sweet-offerings">
+      <div id="traditional">
         <div class="jumbotron" >
-          <h2>Sweet Offerings</h2>
+          <h2>Traditional Treats</h2>
             <div class="container">
-              <p class="text">See below for a sampling of our custom made treats. Each treat is made in a single batch from scratch.</p>
-              <p class="small-text">72 Hours advanced notice required. *<a href="#delivery" class="links" >Delivery Available!</a></p>
+              <p class="text">Each treat is made in a single batch from scratch. 72 Hours advanced notice required. *<a href="#delivery" class="links" >Delivery Available!</a></p>
 
                   
               
+
 <!-- beginning of individual item -->
               <div class="well">
                 <div class="row portfolio-content">
                   <div class="container">
                     <div class="col-md-4">
- 										  <p><%= image_tag "Caramel_Toffee.JPG", alt: "Caramel Toffee", class:"img-responsive panel-image" %></p>
+                       <p><%= image_tag "Triple_Lemon_Sour_Cream.JPG", alt: "Lemon Sour Cream", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
-                    <h3>Caramel Toffee Pecan</h3>
-                    <p>OMG!  No other words to describe this cake. Not nearly as sweet as it sounds but not recommended for those who aren’t “sweet eaters”. Lulu’s “Caramel Toffee” cake is a moist and flavorful cake with toffee, brown sugar and pecans baked inside. It pairs well with coffee, red wine, ice cream or all alone. It also makes a wonderful non-traditional birthday cake!</p><h4>$40.00</h4>
+                    <h3>Triple Lemon Sour Cream</h3>
+                    <p>Lulu’s “Triple Lemon” cake is a simple buttery cake with a lot of lemon goodness. The combination of lemon extracts give this cake its slight lemon zing while the fresh lemon glaze makes this cake perfect for any and every occasion. This cake delivers moisture, flavor and overall goodness. One of my personal favorites! Don’t mind the yellow pieces…it’s called lemon zest!
+                    </p><h4>$35.00</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  <!-- end of individual item  -->
+<!-- beginning of individual item -->
+              <div class="well">
+                <div class="row portfolio-content">
+                  <div class="container">
+                    <div class="col-md-4">
+                      <p><%= image_tag "Plain_7_up.JPG", alt: "Plain 7 Up", class:"img-responsive panel-image" %></p>
+                    </div>
+                    <div class="col-md-8">
+                    <h3>7-Up Pound Cake</h3>
+                    <p>Back to the basics with this traditional work of art. The 7-Up pound cake is aimed to please and bring back fond memories of “back in the day”. I love to eat mine just a little warm with a scoop of vanilla ice cream and fresh strawberries. Add a glaze for just $5 more</p><h4>$25.00</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<!-- end of individual item  -->
+<!-- beginning of individual item -->
+              <div class="well">
+                <div class="row portfolio-content">
+                  <div class="container">
+                    <div class="col-md-4">
+                      <p><%= image_tag "Glazed_7up.JPG", alt: "Glazed 7 Up", class:"img-responsive panel-image" %></p>
+                    </div>
+                    <div class="col-md-8">
+                    <h3>Glazed 7-Up Pound Cake</h3>
+                    <p>Same as the 7-Up Pound, but with a deliciously wonderful glaze topping!</p><h4>$30.00</h4>
                     </div>
                   </div>
                 </div>
@@ -83,8 +117,8 @@
                       <p><%= image_tag "German_Chocolate.JPG", alt: "German Chocolate", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
-                    <h3>Lulu's Twisted German Chocolate</h3>
-                    <p>This “sweet” unity between to terrific cakes is definitely a game-changer for the cake world. With tender, moist and delicious coconut baked inside, with its pecan companion, the outside glaze and topping is just e</p><h4>$40.00</h4>
+                    <h3>German Chocolate</h3>
+                    <p>TThis “sweet” unity of ingredients makes this an all time favorite terrific cake. With tender, moist and delicious coconut baked inside, with its pecan companion, the outside frosting is sure to deliver everything you expect from a german chocolate cake. Just enough to set off a mouth-watering combustion that you will want to experience over and over again.  It’s definitely a game-changer for the cake world.</p><h4>$45.00</h4>
                     </div>
                   </div>
                 </div>
@@ -95,11 +129,58 @@
                 <div class="row portfolio-content">
                   <div class="container">
                     <div class="col-md-4">
+                      <p><%= image_tag "Premium_Chocolate_Chip.PNG", alt: "Premium Chocolate Chip Cookies", class:"img-responsive panel-image" %></p>
+                    </div>
+                    <div class="col-md-8">
+                    <h3>Premium Chocolate Chip Cookies</h3>
+                    <p>Back to the basics with this traditional work of art. The 7-Up pound cake is aimed to please and bring back fond memories of “back in the day”. I love to eat mine just a little warm with a scoop of vanilla ice cream and fresh strawberries. Add a glaze for just $5 more</p><h4>$25.00</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<!-- end of individual item  -->
+
+            </div>
+        </div>
+      </div>
+
+
+<!-- end of traditional--> 
+
+<!-- beginning of specialty-->
+   
+      <div id="specialty">
+        <div class="jumbotron" >
+          <h2>Specialty Treats</h2>
+            <div class="container">
+              <p class="text">72 Hours advanced notice required. *<a href="#delivery" class="links" >Delivery Available</a></p>
+
+<!-- beginning of individual item -->
+              <div class="well">
+                <div class="row portfolio-content">
+                  <div class="container">
+                    <div class="col-md-4">
+                      <p><%= image_tag "Caramel_Toffee.JPG", alt: "Caramel Toffee", class:"img-responsive panel-image" %></p>
+                    </div>
+                    <div class="col-md-8">
+                    <h3>Caramel Toffee Pecan</h3>
+                    <p>OMG!  No other words to describe this cake. Not nearly as sweet as it sounds but not recommended for those who aren’t “sweet eaters”. Lulu’s “Caramel Toffee” cake is a moist and flavorful cake with toffee, brown sugar and pecans baked inside. It pairs well with coffee, red wine, ice cream or all alone. It also makes a wonderful non-traditional birthday cake!</p><h4>$40.00</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<!-- end of individual item  -->
+
+<!-- beginning of individual item -->
+              <div class="well">
+                <div class="row portfolio-content">
+                  <div class="container">
+                    <div class="col-md-4">
                        <p><%= image_tag "Lemon_Coconut_Jr.JPG", alt: "Lemon Coconut", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
                     <h3>Lemon Coconut</h3>
-                    <p>The Lemon Coconut Pound embodies all  the goodness of the buttery and moist triple lemon cake with an added generous touch of sweet & tender coconut. Finished with a light lemon glaze, if you love coconut , you can't go wrong with this mouthwatering combustion of flavors.</p><h4>$40.00</h4>
+                    <p>The Lemon Coconut Pound embodies all  the goodness of the buttery and moist triple lemon cake with an added generous touch of sweet & tender coconut. Finished with a light lemon glaze, if you love coconut , you can't go wrong with this mouthwatering combustion of flavors.</p><h4>$35.00</h4>
                     </div>
                   </div>
                 </div>
@@ -116,6 +197,21 @@
                     <h3>Rum Butter Pecan</h3>
                     <p>This popular cake looks good, smells wonderful and taste awesome. The “Rum Butter Pecan” cake combines the best of both worlds... a rum cake with the texture and density of a pound cake and the southern enjoyment of southern pecans. Of course it’s drizzled with just a touch of caramel.  All you need is a nice hot cup of coffee with this one!
                     </p><h4>$40.00</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<!-- end of individual item  -->
+<!-- beginning of individual item -->
+              <div class="well">
+                <div class="row portfolio-content">
+                  <div class="container">
+                    <div class="col-md-4">
+                      <p><%= image_tag "Strawberry_lemon.JPG", alt: "Strawberry Lemon", class:"img-responsive panel-image" %></p>
+                    </div>
+                    <div class="col-md-8">
+                    <h3>Strawberry Lemon Pound Cake</h3>
+                    <p>This lemon & strawberry combination delivers a moist and buttery mouthwatering delight. With both lemon zest and real strawberry pieces, this cake is all dressed in a light lemon glass and ready for you to devour.</p><h4>$35.00</h4>
                     </div>
                   </div>
                 </div>
@@ -143,7 +239,7 @@
                 <div class="row portfolio-content">
                   <div class="container">
                     <div class="col-md-4">
-                      <p><%= image_tag "Strawberry_Cream_Cheese.JPG", alt: "Strawberry Cream Cheese", class:"img-responsive panel-image" %></p>
+                      <p><%= image_tag "strawberry_cream_cheese2.png", alt: "Strawberry Cream Cheese", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
                     <h3>Strawberry Cream Cheese</h3>
@@ -185,22 +281,7 @@
                 </div>
               </div>
 <!-- end of individual item  -->
-<!-- beginning of individual item -->
-              <div class="well">
-                <div class="row portfolio-content">
-                  <div class="container">
-                    <div class="col-md-4">
-                       <p><%= image_tag "Triple_Lemon_Sour_Cream.JPG", alt: "Lemon Sour Cream", class:"img-responsive panel-image" %></p>
-                    </div>
-                    <div class="col-md-8">
-                    <h3>Triple Lemon Sour Cream</h3>
-                    <p>Lulu’s “Triple Lemon” cake is a simple buttery cake with a lot of lemon goodness. The combination of lemon extracts give this cake its slight lemon zing while the fresh lemon glaze makes this cake perfect for any and every occasion. This cake delivers moisture, flavor and overall goodness. One of my personal favorites! Don’t mind the yellow pieces…it’s called lemon zest!
-                    </p><h4>$35.00</h4>
-                    </div>
-                  </div>
-                </div>
-              </div>
-  <!-- end of individual item  -->
+
 
             <div id="delivery">
               <div class="space"></div>
