--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -99,7 +99,7 @@
                   <div class="container">
                     <div class="col-md-4">
                       
-                      <p><%= image_tag "Carrot.JPG", alt: "Carrot Cake", class:"img-responsive panel-image" %></p>
+                      <p><%= image_tag "carrot_cake.png", alt: "Carrot Cake", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
                     <h3>Carrot Cake</h3>
@@ -114,7 +114,7 @@
                 <div class="row portfolio-content">
                   <div class="container">
                     <div class="col-md-4">
-                      <p><%= image_tag "German_Chocolate.JPG", alt: "German Chocolate", class:"img-responsive panel-image" %></p>
+                      <p><%= image_tag "german_chocolate.png", alt: "German Chocolate", class:"img-responsive panel-image" %></p>
                     </div>
                     <div class="col-md-8">
                     <h3>German Chocolate</h3>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-md-8">
                     <h3>Premium Chocolate Chip Cookies</h3>
-                    <p>Back to the basics with this traditional work of art. The 7-Up pound cake is aimed to please and bring back fond memories of “back in the day”. I love to eat mine just a little warm with a scoop of vanilla ice cream and fresh strawberries. Add a glaze for just $5 more</p><h4>$25.00</h4>
+                    <p>These may possible be one of the BEST cookies you’ve ever had! Real butter, white, dark, milk and semi-sweet chips, toffee, nuts and other quality ingredients make these cookies perfect for ANY occasion. Be careful…they are addictive!</p><h4>$15/baker dozen w/2 dozen minimum</h4>
                     </div>
                   </div>
                 </div>
@@ -335,7 +335,7 @@
               <h4><span class="glyphicon glyphicon-phone-alt"></span> <a href="tel:3132152575">Call Lulu at (313)215-2575</a></h4>
               <h4><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:sweetsbylulu@att.net">Email Lulu</a></h4>
                 <h4><span class="glyphicon glyphicon-thumbs-up"></span><a href="https://www.facebook.com/SweetsxLulu/" style="color: #F3DCDC"> Like Lulu on Facebook</a></h4>
-                <h4><a href"#" >Submit An Order Online</a></h4>
+                <!-- <h4><a href"#" >Submit An Order Online</a></h4> -->
           </div>
             <div class="col-md-4">
               <h2>About Lulu</h2>
