change wording of cookies

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-md-8">
                     <h3>Premium Chocolate Chip Cookies</h3>
-                    <p>These may possible be one of the BEST cookies you’ve ever had! Real butter, white, dark, milk and semi-sweet chips, toffee, nuts and other quality ingredients make these cookies perfect for ANY occasion. Be careful…they are addictive!</p><h4>$15/baker dozen w/2 dozen minimum</h4>
+                    <p>These may possibly be one of the BEST cookies you’ve ever had! Real butter, Ghirardelli white, dark, milk and semi-sweet chips, toffee, nuts and other quality ingredients make these cookies perfect for any occasion. Be careful…they are addictive!</p><h4>$15/baker dozen (2 dozen minimum)</h4>
                     </div>
                   </div>
                 </div>
