removed 'active' class from navbar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-sm-6">
                       <ul class="nav masthead-nav">
-                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#traditional">Traditional</a></li>
                         <li><a href="#specialty">Specialty</a></li>
                         <li><a href="#testimonials">Client Testimonials</a></li>
